--- a/index.html
+++ b/index.html
@@ -2,84 +2,85 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>Расписание 6"З"</title>
 </head>
-<body>
+<body class="container">
     <h1>Расписание 6"З" 16-20 марта</h1>
     <h2>понедельник</h2>
-    <dl>
-        <dt>русск.яз.</dt>
-        <dd>&sect; 49,50, упр.368</dd>
-        <dt>географ.</dt>
-        <dd>&sect; 14-20 (тест)</dd>
-        <dt>бел.мова</dt>
-        <dd>&sect;	44, упр.268</dd>
-        <dt>матем.</dt>
-        <dd></dd>
-        <dt>всем.ист.</dt>
-        <dd>&sect;	8-13 (тест)</dd>
-        <dt>англ.яз. (группа на 1 этаже)</dt>
-        <dd>с.168 упр.4</dd>
+    <dl class="row">
+        <dt class="col-2">русск.яз.</dt>
+        <dd class="col-10">&sect; 49,50, упр.368</dd>
+        <dt class="col-2">географ.</dt>
+        <dd class="col-10">&sect; 14-20 (тест)</dd>
+        <dt class="col-2">бел.мова</dt>
+        <dd class="col-10">&sect;	44, упр.268</dd>
+        <dt class="col-2">матем.</dt>
+        <dd class="col-10"></dd>
+        <dt class="col-2">всем.ист.</dt>
+        <dd class="col-10">&sect;	8-13 (тест)</dd>
+        <dt class="col-2">англ.яз. (группа на 1 этаже)</dt>
+        <dd class="col-10">с.168 упр.4</dd>
     </dl>
     <h2>вторник</h2>
-    <dl>
-        <dt>всем.ист.</dt>
-        <dd>&sect;	14</dd>
-        <dt>русск.яз.</dt>
-        <dd>&sect;	51,52, упр.378</dd>
-        <dt>искусство</dt>
-        <dd></dd>
-        <dt>физ-ра</dt>
-        <dd></dd>
-        <dt>матем.</dt>
-        <dd>ничего</dd>
-        <dt>русск.лит.</dt>
-        <dd>с.19, ответить на вопр. 1,2</dd>
+    <dl class="row">
+        <dt class="col-2">всем.ист.</dt>
+        <dd class="col-10">&sect;	14</dd>
+        <dt class="col-2">русск.яз.</dt>
+        <dd class="col-10">&sect;	51,52, упр.378</dd>
+        <dt class="col-2">искусство</dt>
+        <dd class="col-10"></dd>
+        <dt class="col-2">физ-ра</dt>
+        <dd class="col-10"></dd>
+        <dt class="col-2">матем.</dt>
+        <dd class="col-10">ничего</dd>
+        <dt class="col-2">русск.лит.</dt>
+        <dd class="col-10">с.19, ответить на вопр. 1,2</dd>
     </dl>
     <h2>среда</h2>
-    <dl>
-        <dt>биол.</dt>
-        <dd>&sect;	18(тест)</dd>
-        <dt>бел.мова</dt>
-        <dd>&sect;	46, упр.278</dd>
-        <dt>труд.об.</dt>
-        <dd></dd>
-        <dt>труд.об.</dt>
-        <dd></dd>
-        <dt>бел.лит.</dt>
-        <dd>с.207 выразительное чтение</dd>
-        <dt>матем.</dt>
-        <dd>№70, 71 (а)</dd>
+    <dl class="row">
+        <dt class="col-2">биол.</dt>
+        <dd class="col-10">&sect;	18(тест)</dd>
+        <dt class="col-2">бел.мова</dt>
+        <dd class="col-10">&sect;	46, упр.278</dd>
+        <dt class="col-2">труд.об.</dt>
+        <dd class="col-10"></dd>
+        <dt class="col-2">труд.об.</dt>
+        <dd class="col-10"></dd>
+        <dt class="col-2">бел.лит.</dt>
+        <dd class="col-10">с.207 выразительное чтение</dd>
+        <dt class="col-2">матем.</dt>
+        <dd class="col-10">№70, 71 (а)</dd>
     </dl>
     <h2>четверг</h2>
-    <dl>
-        <dt>англ.яз. (группа на 1 этаже)</dt>
-        <dd></dd>
-        <dt>Ч.З.С.</dt>
-        <dd></dd>
-        <dt>русск.яз.</dt>
-        <dd>&sect;	53,54, упр.386</dd>
-        <dt>русск.лит.</dt>
-        <dd>с.21-46 чит.</dd>
-        <dt>матем.</dt>
-        <dd></dd>
-        <dt>информ.</dt>
-        <dd></dd>
+    <dl class="row">
+        <dt class="col-2">англ.яз. (группа на 1 этаже)</dt>
+        <dd class="col-10"></dd>
+        <dt class="col-2">Ч.З.С.</dt>
+        <dd class="col-10"></dd>
+        <dt class="col-2">русск.яз.</dt>
+        <dd class="col-10">&sect;	53,54, упр.386</dd>
+        <dt class="col-2">русск.лит.</dt>
+        <dd class="col-10">с.21-46 чит.</dd>
+        <dt class="col-2">матем.</dt>
+        <dd class="col-10"></dd>
+        <dt class="col-2">информ.</dt>
+        <dd class="col-10"></dd>
     </dl>
     <h2>пятница</h2>
-    <dl>
-        <dt>англ.</dt>
-        <dd></dd>
-        <dt>бел.мова.</dt>
-        <dd></dd>
-        <dt>матем.</dt>
-        <dd></dd>
-        <dt>бел.лит.</dt>
-        <dd></dd>
-        <dt>физ-ра</dt>
-        <dd></dd>
+    <dl class="row">
+        <dt class="col-2">англ.</dt>
+        <dd class="col-10"></dd>
+        <dt class="col-2">бел.мова.</dt>
+        <dd class="col-10"></dd>
+        <dt class="col-2">матем.</dt>
+        <dd class="col-10"></dd>
+        <dt class="col-2">бел.лит.</dt>
+        <dd class="col-10"></dd>
+        <dt class="col-2">физ-ра</dt>
+        <dd class="col-10"></dd>
     </dl>
     <div>
         
