--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <dd class="col-10"></dd>
         <dt class="col-2">всем.ист.</dt>
         <dd class="col-10">&sect;	8-13 (тест)</dd>
-        <dt class="col-2">англ.яз. (группа на 1 этаже)</dt>
+        <dt class="col-2 none">англ.яз. (группа на 1 этаже)</dt>
         <dd class="col-10">с.168 упр.4</dd>
     </dl>
     <h2>вторник</h2>
@@ -36,8 +36,8 @@
         <dd class="col-10"></dd>
         <dt class="col-2">матем.</dt>
         <dd class="col-10">ничего</dd>
-        <dt class="col-2">русск.лит.</dt>
-        <dd class="col-10">с.19, ответить на вопр. 1,2</dd>
+        <dt class="col-2 none">русск.лит.</dt>
+        <dd class="col-10 ">с.19, ответить на вопр. 1,2</dd>
     </dl>
     <h2>среда</h2>
     <dl class="row">
@@ -51,8 +51,8 @@
         <dd class="col-10"></dd>
         <dt class="col-2">бел.лит.</dt>
         <dd class="col-10">с.207 выразительное чтение</dd>
-        <dt class="col-2">матем.</dt>
-        <dd class="col-10">№70, 71 (а)</dd>
+        <dt class="col-2 none">матем.</dt>
+        <dd class="col-10 ">№70, 71 (а)</dd>
     </dl>
     <h2>четверг</h2>
     <dl class="row">
@@ -66,7 +66,7 @@
         <dd class="col-10">с.21-46 чит.</dd>
         <dt class="col-2">матем.</dt>
         <dd class="col-10"></dd>
-        <dt class="col-2">информ.</dt>
+        <dt class="col-2 none">информ.</dt>
         <dd class="col-10"></dd>
     </dl>
     <h2>пятница</h2>
@@ -79,7 +79,7 @@
         <dd class="col-10"></dd>
         <dt class="col-2">бел.лит.</dt>
         <dd class="col-10"></dd>
-        <dt class="col-2">физ-ра</dt>
+        <dt class="col-2 none">физ-ра</dt>
         <dd class="col-10"></dd>
     </dl>
     <div>
