--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <h2>четверг</h2>
     <dl class="row">
         <dt class="col-2">англ.яз. (группа на 1 этаже)</dt>
-        <dd class="col-10"></dd>
+        <dd class="col-10">c.171 упр.5</dd>
         <dt class="col-2">Ч.З.С.</dt>
         <dd class="col-10"></dd>
         <dt class="col-2">русск.яз.</dt>
@@ -65,7 +65,7 @@
         <dt class="col-2">русск.лит.</dt>
         <dd class="col-10">с.21-46 чит.</dd>
         <dt class="col-2">матем.</dt>
-        <dd class="col-10"></dd>
+        <dd class="col-10">№72</dd>
         <dt class="col-2 none">информ.</dt>
         <dd class="col-10"></dd>
     </dl>
