--- a/index.html
+++ b/index.html
@@ -71,18 +71,17 @@
     </dl>
     <h2>пятница</h2>
     <dl class="row">
-        <dt class="col-2">англ.</dt>
+        <dt class="col-2">англ. (группа на 1 этаже)</dt>
         <dd class="col-10"></dd>
         <dt class="col-2">бел.мова.</dt>
-        <dd class="col-10"></dd>
+        <dd class="col-10">будет бел.лит.</dd>
         <dt class="col-2">матем.</dt>
-        <dd class="col-10"></dd>
+        <dd class="col-10">сделать рисунок по точкам (<a target="_blank" href="domashka 1.jpg">страница 1</a>,<a target="_blank" href="domashka 2.jpg">страница 2</a>   )</dd>
         <dt class="col-2">бел.лит.</dt>
-        <dd class="col-10"></dd>
+        <dd class="col-10">с.203 вопр.6,8,9,11</dd>
         <dt class="col-2 none">физ-ра</dt>
         <dd class="col-10"></dd>
     </dl>
-    <div>
-        
+</div>
 </body>
 </html>
