--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <dt class="col-2">матем.</dt>
         <dd class="col-10">сделать рисунок по точкам (<a target="_blank" href="domashka 1.jpg">страница 1</a>,<a target="_blank" href="domashka 2.jpg">страница 2</a>   )</dd>
         <dt class="col-2">бел.лит.</dt>
-        <dd class="col-10">с.203 вопр.6,8,9,11</dd>
+        <dd class="col-10">с.207 выразительное чтение вопр.2,4,5</dd>
         <dt class="col-2 none">физ-ра</dt>
         <dd class="col-10"></dd>
     </dl>
