--- a/index.html
+++ b/index.html
@@ -12,60 +12,60 @@
     <h2>понедельник</h2>
     <dl class="row">
         <dt class="col-2">русск.яз.</dt>
-        <dd class="col-10">&sect; 49,50, упр.368</dd>
+        <dd class="col-10">&sect;</dd>
         <dt class="col-2">географ.</dt>
-        <dd class="col-10">&sect; 14-20 (тест)</dd>
+        <dd class="col-10">&sect; 21</dd>
         <dt class="col-2">бел.мова</dt>
-        <dd class="col-10">&sect;	44, упр.268</dd>
+        <dd class="col-10">&sect;</dd>
         <dt class="col-2">матем.</dt>
-        <dd class="col-10"></dd>
+        <dd class="col-10">№74,71(б)</dd>
         <dt class="col-2">всем.ист.</dt>
-        <dd class="col-10">&sect;	8-13 (тест)</dd>
+        <dd class="col-10">&sect;</dd>
         <dt class="col-2 none">англ.яз. (группа на 1 этаже)</dt>
-        <dd class="col-10">с.168 упр.4</dd>
+        <dd class="col-10">c.177, упр.4</dd>
     </dl>
     <h2>вторник</h2>
     <dl class="row">
         <dt class="col-2">всем.ист.</dt>
-        <dd class="col-10">&sect;	14</dd>
+        <dd class="col-10">&sect;	</dd>
         <dt class="col-2">русск.яз.</dt>
-        <dd class="col-10">&sect;	51,52, упр.378</dd>
+        <dd class="col-10">&sect;</dd>
         <dt class="col-2">искусство</dt>
         <dd class="col-10"></dd>
         <dt class="col-2">физ-ра</dt>
         <dd class="col-10"></dd>
         <dt class="col-2">матем.</dt>
-        <dd class="col-10">ничего</dd>
+        <dd class="col-10"></dd>
         <dt class="col-2 none">русск.лит.</dt>
-        <dd class="col-10 ">с.19, ответить на вопр. 1,2</dd>
+        <dd class="col-10 ">с.32-46 дочит.</dd>
     </dl>
     <h2>среда</h2>
     <dl class="row">
         <dt class="col-2">биол.</dt>
-        <dd class="col-10">&sect;	18(тест)</dd>
+        <dd class="col-10">&sect;</dd>
         <dt class="col-2">бел.мова</dt>
-        <dd class="col-10">&sect;	46, упр.278</dd>
+        <dd class="col-10">&sect;</dd>
         <dt class="col-2">труд.об.</dt>
         <dd class="col-10"></dd>
         <dt class="col-2">труд.об.</dt>
         <dd class="col-10"></dd>
         <dt class="col-2">бел.лит.</dt>
-        <dd class="col-10">с.207 выразительное чтение</dd>
+        <dd class="col-10"></dd>
         <dt class="col-2 none">матем.</dt>
-        <dd class="col-10 ">№70, 71 (а)</dd>
+        <dd class="col-10 "></dd>
     </dl>
     <h2>четверг</h2>
     <dl class="row">
         <dt class="col-2">англ.яз. (группа на 1 этаже)</dt>
-        <dd class="col-10">c.171 упр.5</dd>
+        <dd class="col-10"></dd>
         <dt class="col-2">Ч.З.С.</dt>
         <dd class="col-10"></dd>
         <dt class="col-2">русск.яз.</dt>
-        <dd class="col-10">&sect;	53,54, упр.386</dd>
+        <dd class="col-10">&sect;</dd>
         <dt class="col-2">русск.лит.</dt>
-        <dd class="col-10">с.21-46 чит.</dd>
+        <dd class="col-10"></dd>
         <dt class="col-2">матем.</dt>
-        <dd class="col-10">№72</dd>
+        <dd class="col-10"></dd>
         <dt class="col-2 none">информ.</dt>
         <dd class="col-10"></dd>
     </dl>
@@ -76,9 +76,9 @@
         <dt class="col-2">бел.мова.</dt>
         <dd class="col-10">будет бел.лит.</dd>
         <dt class="col-2">матем.</dt>
-        <dd class="col-10">сделать рисунок по точкам (<a target="_blank" href="domashka 1.jpg">страница 1</a>,<a target="_blank" href="domashka 2.jpg">страница 2</a>   )</dd>
+        <dd class="col-10"></dd>
         <dt class="col-2">бел.лит.</dt>
-        <dd class="col-10">с.207 выразительное чтение, вопр.2,4,5</dd>
+        <dd class="col-10"></dd>
         <dt class="col-2 none">физ-ра</dt>
         <dd class="col-10"></dd>
     </dl>
