--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
     <h2>понедельник</h2>
     <dl class="row">
         <dt class="col-2">русск.яз.</dt>
-        <dd class="col-10">&sect;</dd>
+        <dd class="col-10"></dd>
         <dt class="col-2">географ.</dt>
         <dd class="col-10">&sect; 21</dd>
         <dt class="col-2">бел.мова</dt>
-        <dd class="col-10">&sect;</dd>
+        <dd class="col-10"></dd>
         <dt class="col-2">матем.</dt>
         <dd class="col-10">№74,71(б)</dd>
         <dt class="col-2">всем.ист.</dt>
-        <dd class="col-10">&sect;</dd>
+        <dd class="col-10">ничего</dd>
         <dt class="col-2 none">англ.яз. (группа на 1 этаже)</dt>
         <dd class="col-10">c.177, упр.4</dd>
     </dl>
     <h2>вторник</h2>
     <dl class="row">
         <dt class="col-2">всем.ист.</dt>
-        <dd class="col-10">&sect;	</dd>
+        <dd class="col-10">	</dd>
         <dt class="col-2">русск.яз.</dt>
-        <dd class="col-10">&sect;</dd>
+        <dd class="col-10"></dd>
         <dt class="col-2">искусство</dt>
         <dd class="col-10"></dd>
         <dt class="col-2">физ-ра</dt>
@@ -42,9 +42,9 @@
     <h2>среда</h2>
     <dl class="row">
         <dt class="col-2">биол.</dt>
-        <dd class="col-10">&sect;</dd>
+        <dd class="col-10"></dd>
         <dt class="col-2">бел.мова</dt>
-        <dd class="col-10">&sect;</dd>
+        <dd class="col-10"></dd>
         <dt class="col-2">труд.об.</dt>
         <dd class="col-10"></dd>
         <dt class="col-2">труд.об.</dt>
@@ -61,7 +61,7 @@
         <dt class="col-2">Ч.З.С.</dt>
         <dd class="col-10"></dd>
         <dt class="col-2">русск.яз.</dt>
-        <dd class="col-10">&sect;</dd>
+        <dd class="col-10"></dd>
         <dt class="col-2">русск.лит.</dt>
         <dd class="col-10"></dd>
         <dt class="col-2">матем.</dt>
@@ -74,7 +74,7 @@
         <dt class="col-2">англ. (группа на 1 этаже)</dt>
         <dd class="col-10"></dd>
         <dt class="col-2">бел.мова.</dt>
-        <dd class="col-10">будет бел.лит.</dd>
+        <dd class="col-10"></dd>
         <dt class="col-2">матем.</dt>
         <dd class="col-10"></dd>
         <dt class="col-2">бел.лит.</dt>
