--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
     <h2>вторник</h2>
     <dl class="row">
         <dt class="col-2">всем.ист.</dt>
-        <dd class="col-10">	</dd>
+        <dd class="col-10">&sect; 15	</dd>
         <dt class="col-2">русск.яз.</dt>
-        <dd class="col-10"></dd>
+        <dd class="col-10">&sect;56 упр.397</dd>
         <dt class="col-2">искусство</dt>
         <dd class="col-10"></dd>
         <dt class="col-2">физ-ра</dt>
         <dd class="col-10"></dd>
         <dt class="col-2">матем.</dt>
-        <dd class="col-10"></dd>
+        <dd class="col-10">подг. к контрольной</dd>
         <dt class="col-2 none">русск.лит.</dt>
         <dd class="col-10 ">с.32-46 дочит.</dd>
     </dl>
