--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
         <dt class="col-2">биол.</dt>
         <dd class="col-10"></dd>
         <dt class="col-2">бел.мова</dt>
-        <dd class="col-10"></dd>
+        <dd class="col-10">&sect;46, упр.289</dd>
         <dt class="col-2">труд.об.</dt>
         <dd class="col-10"></dd>
         <dt class="col-2">труд.об.</dt>
         <dd class="col-10"></dd>
         <dt class="col-2">бел.лит.</dt>
-        <dd class="col-10"></dd>
+        <dd class="col-10">подг. описание про Тоника</dd>
         <dt class="col-2 none">матем.</dt>
-        <dd class="col-10 "></dd>
+        <dd class="col-10 ">ничего</dd>
     </dl>
     <h2>четверг</h2>
     <dl class="row">
