--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
     <h2>четверг</h2>
     <dl class="row">
         <dt class="col-2">англ.яз. (группа на 1 этаже)</dt>
-        <dd class="col-10"></dd>
+        <dd class="col-10">ничего</dd>
         <dt class="col-2">Ч.З.С.</dt>
         <dd class="col-10"></dd>
         <dt class="col-2">русск.яз.</dt>
-        <dd class="col-10"></dd>
+        <dd class="col-10">упр.401</dd>
         <dt class="col-2">русск.лит.</dt>
-        <dd class="col-10"></dd>
+        <dd class="col-10">ничего</dd>
         <dt class="col-2">матем.</dt>
-        <dd class="col-10"></dd>
+        <dd class="col-10">ничего</dd>
         <dt class="col-2 none">информ.</dt>
         <dd class="col-10"></dd>
     </dl>
