--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Расписание 6"З"</title>
+    <title>Расписание 7"З"</title>
 </head>
 <body class="container">
     <h1>6"З" <span class="text-muted">(49-й школы г.Минска)</span></h1>
@@ -37,7 +37,7 @@
         <div class="timetable-cell">
             <ul>
                 <li>
-                    <a href="#">Оценки</a>
+                    <a href="#grades">Оценки</a>
                     <ul>
                         <li>
                             <a href="#grades-monday">понедельник</a>
@@ -58,16 +58,92 @@
                 </li>
             </ul>
         </div>
+        <div class="warning-cell">
+            <ul>
+                <li>
+                    <strong class="warning">Внимание!</strong>
+                    <ul class="border-warning">
+                        <li>
+                            18.09(пятница) сам.работа по ист.бел.
+                        </li>
+                        <li>
+                            18.09(пятница) тертин. диктант
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
     </div>
-    <h2 id="timetable">Расписание на 23-27 марта</h2>
+<!--    &sect;-->
+    <h2 id="timetable">Расписание на 14-18 сентября</h2>
     <div class="timetable-day">
         <h3 id="timetable-monday">понедельник</h3>
         <div class="row">
-            <div class="timetable-cell">русск. яз.</div>
+            <div class="timetable-cell">биология</div>
+            <div class="timetable-cell">&sect;2, додел. табл.</div>
+        </div>
+        <div class="row">
+            <div class="timetable-cell">алгебра</div>
+            <div class="timetable-cell">№1.86, №1.89, №1.90</div>
+        </div>
+        <div class="row">
+            <div class="timetable-cell">англ.яз.</div>
+            <div class="timetable-cell">с.15 упр.3 (a,b)<br>{группа Нтальи Петровны}</div>
+        </div>
+        <div class="row">
+            <div class="timetable-cell">бел.мова</div>
+            <div class="timetable-cell">&sect;3, упр.16(п.)<br>принести тетр. для конт. работ</div>
+        </div>
+        <div class="row">
+            <div class="timetable-cell">Ч З С</div>
             <div class="timetable-cell"></div>
         </div>
         <div class="row">
-            <div class="timetable-cell">географ.</div>
+            <div class="timetable-cell">всем.ист.</div>
+            <div class="timetable-cell">&sect;2</div>
+        </div>
+    </div>
+
+    <div class="timetable-day">
+        <h3 id="timetable-tuesday">вторник</h3>
+        <div class="row">
+            <div class="timetable-cell">информ.</div>
+            <div class="timetable-cell"></div>
+        </div>
+        <div class="row">
+            <div class="timetable-cell">физика</div>
+            <div class="timetable-cell">&sect;5-6, упр.2 (1, 2, 4)</div>
+        </div>
+        <div class="row">
+            <div class="timetable-cell">англ.яз.</div>
+            <div class="timetable-cell"></div>
+        </div>
+        <div class="row">
+            <div class="timetable-cell">русск.яз.</div>
+            <div class="timetable-cell">&sect;3 с.15 отв. на вопр.,упр.15<br></div>
+        </div>
+        <div class="row">
+            <div class="timetable-cell">геометрия</div>
+            <div class="timetable-cell">№9</div>
+        </div>
+        <div class="row">
+            <div class="timetable-cell">русск.лит.</div>
+            <div class="timetable-cell">с.21-25 отв. на вопр.,<br>выр. чт. песен</div>
+        </div>
+    </div>        
+
+    <div class="timetable-day">
+        <h3 id="timetable-wednesday">среда</h3>
+        <div class="row">
+            <div class="timetable-cell">алгебра</div>
+            <div class="timetable-cell"></div>
+        </div>
+        <div class="row">
+            <div class="timetable-cell">биолог.</div>
+            <div class="timetable-cell"></div>
+        </div>
+        <div class="row">
+            <div class="timetable-cell">химия</div>
             <div class="timetable-cell"></div>
         </div>
         <div class="row">
@@ -75,23 +151,23 @@
             <div class="timetable-cell"></div>
         </div>
         <div class="row">
-            <div class="timetable-cell">матем.</div>
+            <div class="timetable-cell">физ-ра</div>
             <div class="timetable-cell"></div>
         </div>
         <div class="row">
-            <div class="timetable-cell">всем.ист.</div>
-            <div class="timetable-cell"></div>
-        </div>
-        <div class="row">
-            <div class="timetable-cell">англ.яз.</div>
+            <div class="timetable-cell">бел.лит</div>
             <div class="timetable-cell"></div>
         </div>
     </div>
 
     <div class="timetable-day">
-        <h3 id="timetable-tuesday">вторник</h3>
+        <h3 id="timetable-thursday">четверг</h3>
         <div class="row">
-            <div class="timetable-cell">всем.ист.</div>
+            <div class="timetable-cell">труд.об.</div>
+            <div class="timetable-cell"></div>
+        </div>
+        <div class="row">
+            <div class="timetable-cell">труд.об.</div>
             <div class="timetable-cell"></div>
         </div>
         <div class="row">
@@ -103,71 +179,11 @@
             <div class="timetable-cell"></div>
         </div>
         <div class="row">
-            <div class="timetable-cell">физ-ра</div>
-            <div class="timetable-cell"></div>
-        </div>
-        <div class="row">
-            <div class="timetable-cell">матем.</div>
+            <div class="timetable-cell">геометрия</div>
             <div class="timetable-cell"></div>
         </div>
         <div class="row">
             <div class="timetable-cell">русск.лит.</div>
-            <div class="timetable-cell"></div>
-        </div>
-    </div>        
-
-    <div class="timetable-day">
-        <h3 id="timetable-wednesday">среда</h3>
-        <div class="row">
-            <div class="timetable-cell">биолог.</div>
-            <div class="timetable-cell"></div>
-        </div>
-        <div class="row">
-            <div class="timetable-cell">бел.мова</div>
-            <div class="timetable-cell"></div>
-        </div>
-        <div class="row">
-            <div class="timetable-cell">труд.об.</div>
-            <div class="timetable-cell"></div>
-        </div>
-        <div class="row">
-            <div class="timetable-cell">труд.об.</div>
-            <div class="timetable-cell"></div>
-        </div>
-        <div class="row">
-            <div class="timetable-cell">бел.лит.</div>
-            <div class="timetable-cell"></div>
-        </div>
-        <div class="row">
-            <div class="timetable-cell">матем.</div>
-            <div class="timetable-cell"></div>
-        </div>
-    </div>
-
-    <div class="timetable-day">
-        <h3 id="timetable-thursday">четверг</h3>
-        <div class="row">
-            <div class="timetable-cell">англ.яз.</div>
-            <div class="timetable-cell"></div>
-        </div>
-        <div class="row">
-            <div class="timetable-cell">Ч. З. С.</div>
-            <div class="timetable-cell"></div>
-        </div>
-        <div class="row">
-            <div class="timetable-cell">русск.яз.</div>
-            <div class="timetable-cell"></div>
-        </div>
-        <div class="row">
-            <div class="timetable-cell">русск.лит..</div>
-            <div class="timetable-cell"></div>
-        </div>
-        <div class="row">
-            <div class="timetable-cell">матем.</div>
-            <div class="timetable-cell"></div>
-        </div>
-        <div class="row">
-            <div class="timetable-cell">информ.</div>
             <div class="timetable-cell"></div>
         </div>
     </div>
@@ -179,24 +195,28 @@
             <div class="timetable-cell"></div>
         </div>
         <div class="row">
-            <div class="timetable-cell">бел.мова</div>
-            <div class="timetable-cell"></div>
-        </div>
-        <div class="row">
-            <div class="timetable-cell">матем.</div>
-            <div class="timetable-cell"></div>
-        </div>
-        <div class="row">
-            <div class="timetable-cell">бел.лит.</div>
+            <div class="timetable-cell">физика</div>
             <div class="timetable-cell"></div>
         </div>
         <div class="row">
             <div class="timetable-cell">физ-ра</div>
             <div class="timetable-cell"></div>
         </div>
+        <div class="row">
+            <div class="timetable-cell">алгебра</div>
+            <div class="timetable-cell"></div>
+        </div>
+        <div class="row">
+            <div class="timetable-cell">ист.бел.</div>
+            <div class="timetable-cell">&sect;1-2 сам. работа</div>
+        </div>
+        <div class="row">
+            <div class="timetable-cell">географ.</div>
+            <div class="timetable-cell">&sect;1-2 термин. диктант</div>
+        </div>
     </div>    
 </div>
-<h2>Оценки</h2>
+<h2 id="grades">Оценки</h2>
 <div class="day">
     <h3 id="grades-monday">понедельник</h3>
     <div class="row">
