--- a/index.html
+++ b/index.html
@@ -64,17 +64,20 @@
                     <strong class="warning">Внимание!</strong>
                     <ul class="border-warning">
                         <li>
+                            16.09(среда) сам. работа по геометр.
+                        </li>
+                        <li>
                             18.09(пятница) сам.работа по ист.бел.
                         </li>
                         <li>
-                            18.09(пятница) тертин. диктант
+                            18.09(пятница) тертин. диктант по географ.
                         </li>
                     </ul>
                 </li>
             </ul>
         </div>
     </div>
-<!--    &sect;-->
+<!--   &sect; -->
     <h2 id="timetable">Расписание на 14-18 сентября</h2>
     <div class="timetable-day">
         <h3 id="timetable-monday">понедельник</h3>
@@ -116,7 +119,7 @@
         </div>
         <div class="row">
             <div class="timetable-cell">англ.яз.</div>
-            <div class="timetable-cell"></div>
+            <div class="timetable-cell">с.11 упр.2 (раб. тетр.)<br>{группа Натальи Петровны}</div>
         </div>
         <div class="row">
             <div class="timetable-cell">русск.яз.</div>
@@ -136,11 +139,11 @@
         <h3 id="timetable-wednesday">среда</h3>
         <div class="row">
             <div class="timetable-cell">алгебра</div>
-            <div class="timetable-cell"></div>
+            <div class="timetable-cell">№1.80-1.81</div>
         </div>
         <div class="row">
             <div class="timetable-cell">биолог.</div>
-            <div class="timetable-cell"></div>
+            <div class="timetable-cell">&sect;3, &sect;1-2 повт., прин. 3 листика</div>
         </div>
         <div class="row">
             <div class="timetable-cell">химия</div>
@@ -148,7 +151,7 @@
         </div>
         <div class="row">
             <div class="timetable-cell">бел.мова</div>
-            <div class="timetable-cell"></div>
+            <div class="timetable-cell">&sect;4 пр.26</div>
         </div>
         <div class="row">
             <div class="timetable-cell">физ-ра</div>
@@ -221,12 +224,12 @@
     <h3 id="grades-monday">понедельник</h3>
     <div class="row">
         <div class="cell"></div>
-        <div class="cell">русск. яз.</div>
-        <div class="cell">географ.</div>
-        <div class="cell">бел.мова.</div>
-        <div class="cell">матем.</div>
-        <div class="cell">всем.ист.</div>
+        <div class="cell">биолог.</div>
+        <div class="cell">алгебра</div>
         <div class="cell">англ.яз.</div>
+        <div class="cell">бел.мова</div>
+        <div class="cell">всем.ист.</div>
+        <div class="cell">ЧЗС</div>
     </div>
     <div class="row">
         <div class="cell">Атливанова</div>
@@ -293,7 +296,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell">5</div>
         <div class="cell"></div>
         <div class="cell"></div>
 
@@ -401,9 +404,9 @@
     <div class="row">
         <div class="cell">Поскробко</div>
         <div class="cell"></div>
+        <div class="cell">6</div>
         <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell">6</div>
         <div class="cell"></div>
         <div class="cell"></div>
 
@@ -463,7 +466,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell">5</div>
         <div class="cell"></div>
         <div class="cell"></div>
 
@@ -481,9 +484,9 @@
     <div class="row">
         <div class="cell">Шубенок</div>
         <div class="cell"></div>
+        <div class="cell">8</div>
         <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell">7</div>
         <div class="cell"></div>
         <div class="cell"></div>
 
@@ -504,11 +507,11 @@
     <h3 id="grades-tuesday">вторник</h3>
     <div class="row">
         <div class="cell"></div>
-        <div class="cell">всем.ист.</div>
-        <div class="cell">русск.яз.</div>
-        <div class="cell">искусство</div>
-        <div class="cell">физ-ра</div>
-        <div class="cell">матем</div>
+        <div class="cell">информ.</div>
+        <div class="cell">физика</div>
+        <div class="cell">англ. яз.</div>
+        <div class="cell">русск. яз.</div>
+        <div class="cell">геометрия</div>
         <div class="cell">русск.лит.</div>
     </div>
     <div class="row">
@@ -786,12 +789,12 @@
         <h3 id="grades-wednesday">среда</h3>
     <div class="row">
         <div class="cell"></div>
+        <div class="cell">алгебра</div>
         <div class="cell">биолог.</div>
+        <div class="cell">химия</div>
         <div class="cell">бел.мова</div>
-        <div class="cell">труд.об.</div>
-        <div class="cell">труд.об.</div>
+        <div class="cell">физ-ра</div>
         <div class="cell">бел.лит.</div>
-        <div class="cell">матем.</div>
     </div>
     <div class="row">
         <div class="cell">Атливанова</div>
@@ -1068,12 +1071,12 @@
         <h3 id="grades-thursday">четверг</h3>
     <div class="row">
         <div class="cell"></div>
-        <div class="cell">англ.яз.</div>
-        <div class="cell">Ч.З.С.</div>
+        <div class="cell">труд.об.</div>
+        <div class="cell">труд.об.</div>
         <div class="cell">русск.яз.</div>
+        <div class="cell">искусство</div>
+        <div class="cell">геометр.</div>
         <div class="cell">русск.лит.</div>
-        <div class="cell">матем.</div>
-        <div class="cell">информ.</div>
     </div>
     <div class="row">
         <div class="cell">Атливанова</div>
@@ -1351,10 +1354,11 @@
     <div class="row">
         <div class="cell"></div>
         <div class="cell">англ.яз.</div>
-        <div class="cell">бел.мова</div>
-        <div class="cell">матем.</div>
-        <div class="cell">бел.лит.</div>
+        <div class="cell">физика</div>
         <div class="cell">физ-ра</div>
+        <div class="cell">алгебра</div>
+        <div class="cell">ист.бел.</div>
+        <div class="cell">географ.</div>
     </div>
     <div class="row">
         <div class="cell">Атливанова</div>
