--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         </div>
         <div class="row">
             <div class="timetable-cell">химия</div>
-            <div class="timetable-cell"></div>
+            <div class="timetable-cell">выуч. форзац, &sect;3 (выуч. надп. на картнках),&sect;1-3повт.,&sect;4(№4 письменно)<br></div>
         </div>
         <div class="row">
             <div class="timetable-cell">бел.мова</div>
@@ -175,7 +175,11 @@
         </div>
         <div class="row">
             <div class="timetable-cell">русск.яз.</div>
-            <div class="timetable-cell"></div>
+            <div class="timetable-cell">учебн. сообщение на тему: <br>
+                В.1-офиц.-делавой стиль речи,
+                В.2-публицистический,
+                &sect;4 упр. 25
+            </div>
         </div>
         <div class="row">
             <div class="timetable-cell">искусство</div>
@@ -187,7 +191,7 @@
         </div>
         <div class="row">
             <div class="timetable-cell">русск.лит.</div>
-            <div class="timetable-cell"></div>
+            <div class="timetable-cell">с.27-28 выр. чт., вопр. №3</div>
         </div>
     </div>
         
@@ -332,6 +336,16 @@
 
     </div>
     <div class="row">
+        <div class="cell">Ильюшенко</div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+
+    </div>
+    <div class="row">
         <div class="cell">Кашанский</div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -351,6 +365,7 @@
         <div class="cell"></div>
 
     </div>
+
     <div class="row">
         <div class="cell">Кобец</div>
         <div class="cell"></div>
@@ -559,7 +574,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell">8</div>
         <div class="cell"></div>
         <div class="cell"></div>
 
@@ -615,13 +630,23 @@
 
     </div>
     <div class="row">
+        <div class="cell">Ильюшенко</div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell">8</div>
+
+    </div>
+    <div class="row">
         <div class="cell">Кашанский</div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
+        <div class="cell">6</div>
         <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell">7</div>
 
     </div>
     <div class="row">
@@ -629,11 +654,12 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell">8</div>
         <div class="cell"></div>
         <div class="cell"></div>
 
     </div>
+
     <div class="row">
         <div class="cell">Кобец</div>
         <div class="cell"></div>
@@ -676,7 +702,7 @@
     </div>
     <div class="row">
         <div class="cell">Месник</div>
-        <div class="cell"></div>
+        <div class="cell">9</div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -711,7 +737,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell">6</div>
 
     </div>
     <div class="row">
@@ -726,7 +752,7 @@
     </div>
     <div class="row">
         <div class="cell">Рудаков</div>
-        <div class="cell"></div>
+        <div class="cell">6</div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -756,17 +782,17 @@
     </div>
     <div class="row">
         <div class="cell">Шарох</div>
+        <div class="cell">6</div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell">7</div>
 
     </div>
     <div class="row">
         <div class="cell">Шубенок</div>
-        <div class="cell"></div>
+        <div class="cell">7</div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -896,6 +922,16 @@
         <div class="cell"></div>
 
     </div>
+        <div class="row">
+            <div class="cell">Ильюшенко</div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+
+        </div>
     <div class="row">
         <div class="cell">Кашанский</div>
         <div class="cell"></div>
@@ -1179,6 +1215,16 @@
 
     </div>
     <div class="row">
+        <div class="cell">Ильюшенко</div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+
+    </div>
+    <div class="row">
         <div class="cell">Кашанский</div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -1450,6 +1496,16 @@
         <div class="cell"></div>
        
     </div>
+        <div class="row">
+            <div class="cell">Ильюшенко</div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+
+        </div>
     <div class="row">
         <div class="cell">Кашанский</div>
         <div class="cell"></div>
