--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         </div>
         <div class="row">
             <div class="timetable-cell">бел.лит</div>
-            <div class="timetable-cell"></div>
+            <div class="timetable-cell">c.8-10 выр. чт., с.11 вопр. 3</div>
         </div>
     </div>
 
