--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Расписание 7"З"</title>
 </head>
 <body class="container">
-    <h1>6"З" <span class="text-muted">(49-й школы г.Минска)</span></h1>
+    <h1>7"З" <span class="text-muted">(49-й школы г.Минска)</span></h1>
     <div class="row">
         <div class="timetable-cell">
             <ul>
@@ -176,8 +176,8 @@
         <div class="row">
             <div class="timetable-cell">русск.яз.</div>
             <div class="timetable-cell">учебн. сообщение на тему: <br>
-                В.1-публицистический,
-                В.2-офиц.-делавой стиль речи,
+                В.1-публицистический,<br>
+                В.2-офиц.-делавой стиль речи,<br>
                 &sect;4 упр. 25
             </div>
         </div>
