--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         </div>
         <div class="row">
             <div class="timetable-cell">геометрия</div>
-            <div class="timetable-cell"></div>
+            <div class="timetable-cell">с. 28 моделирование</div>
         </div>
         <div class="row">
             <div class="timetable-cell">русск.лит.</div>
@@ -827,7 +827,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell">7</div>
         <div class="cell"></div>
         <div class="cell"></div>
 
@@ -869,7 +869,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell">9</div>
 
     </div>
     <div class="row">
@@ -887,7 +887,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell">8</div>
         <div class="cell"></div>
         <div class="cell"></div>
 
@@ -919,7 +919,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell">5</div>
 
     </div>
         <div class="row">
@@ -939,7 +939,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell">9</div>
 
     </div>
     <div class="row">
@@ -987,7 +987,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell">7</div>
         <div class="cell"></div>
         <div class="cell"></div>
 
@@ -1039,7 +1039,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell">9</div>
 
     </div>
     <div class="row">
@@ -1077,7 +1077,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell">6</div>
         <div class="cell"></div>
         <div class="cell"></div>
 
