--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             18.09(пятница) сам.работа по ист.бел.
                         </li>
                         <li>
-                            18.09(пятница) тертин. диктант по географ.
+                            18.09(пятница) термин. диктант по географ.
                         </li>
                     </ul>
                 </li>
@@ -199,11 +199,11 @@
         <h3 id="timetable-friday">пятница</h3>
         <div class="row">
             <div class="timetable-cell">англ.яз.</div>
-            <div class="timetable-cell"></div>
+            <div class="timetable-cell">с.15 №1 (р. тетр.)<br>{группа Натальи Петровны}</div>
         </div>
         <div class="row">
             <div class="timetable-cell">физика</div>
-            <div class="timetable-cell"></div>
+            <div class="timetable-cell">&sect;7 №3,4,5,6 (п.)</div>
         </div>
         <div class="row">
             <div class="timetable-cell">физ-ра</div>
